= 5.2 = - New: New feature "Hide a part of the iframe". Extra layers can be placed over the iframe. This enables you to e.g. hide a logo or even place your own logo on an iframe. See the pro demo for examples (Pro) - New: Try catch is now used at features which could fail when features for the same domain are used on external domains. Now the exceptions are catched and logged to the console. - New: A dynamic auto id is now only generated if several iframes are detected on one page. - New: Tested with Wordpress 3.8. - New: Improved documentation. - New: vertical and/or horizontal scrollbars in the pro feature "Show only part of the iframe" solution are possible. This makes it possible to include e.g. a whole inner content with scrollbars but without showing e.g. the header of the external page. See the pro version for a working example. - New: Resize can now be delayed. This helps if the onload event is fired but the page is not completely build. This feature is also possible in the external workaround of the pro version. - New: Administration options are grayed out if not available because of another setting. - New: Expert mode. If you enable this the description is only shown if you click on the setting. You see more settings at once but only one description at once. Use this if you are common with the settings. - New: id is now set automatically if a src is set in the shortcode but no id is set. This avoids problems if people  forgets to set the id.
git-svn-id: https://plugins.svn.wordpress.org/advanced-iframe/trunk@829292 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/ai.css
+++ b/css/ai.css
@@ -164,3 +164,6 @@ ul.pro {
 	text-decoration: none;
 }
 
+a.signup_inner_button:active, a.signup_inner_button:hover {
+  color:#cccccc;
+}
